--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
         <p id="summary">----</p>
     </body>
     <script src="javascript.js"></script>
-    <script src="skyicons.js"></script>
+    <script src="skycons.js"></script>
 </html>
